Created HTTP GET requests with fake data.

--- a/www/templates/contact/contact.html
+++ b/www/templates/contact/contact.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Kontakt">
+<ion-view view-title="Kontakt" data-ng-init="loadEmployeesList()">
     <ion-content class="padding">
         <form name="form">
             <div class="list list-item">
