--- a/www/templates/login/change_password.html
+++ b/www/templates/login/change_password.html
@@ -8,9 +8,9 @@
                 </label>
                 <label class="item item-input">
                     <span class="input-label">Potwierdź nowe hasło</span>
-                    <input name="confirmPassword" type="password" data-ng-model="user.password2" data-ng-minlength="5" required>
+                    <input name="confirmPassword" type="password" data-ng-blur="confirmPasswordBlur = true" data-ng-model="user.password2" data-ng-minlength="5" required>
                 </label>
-                <p style="color: red;" data-ng-show="user.password!==user.password2">Wprowadź takie same hasła</p>
+                <p style="color: red;" data-ng-show="user.password!==user.password2 && confirmPasswordBlur">Wprowadź takie same hasła</p>
             </div>
         </form>
         <div class="col text-center">
