--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -11,8 +11,8 @@ navigation history that also transitions its views in and out.
     </ion-tab>
 
     <!-- Cennik Tab -->
-    <ion-tab title="Cennik" icon-off="ion-ios-list-outline" icon-on="ion-ios-list" href="#/tab/pricelist">
-        <ion-nav-view name="tab-pricelist"></ion-nav-view>
+    <ion-tab title="Cennik" icon-off="ion-ios-list-outline" icon-on="ion-ios-list" href="#/tab/prices">
+        <ion-nav-view name="tab-prices"></ion-nav-view>
     </ion-tab>
 
     <!-- Pracownicy Tab -->
