--- a/www/templates/login/login.html
+++ b/www/templates/login/login.html
@@ -1,12 +1,12 @@
 <ion-view view-title="Logowanie">
     <ion-content class="padding" style="text-align: left;">
         <form name="form">
-            <div class="list">
+            <div class="list list-item">
                 <label class="item item-input">
                     <span class="input-label">Nazwa użytkownika</span>
-                    <input name="username" type="text" data-ng-model="data.username" data-ng-pattern="/^[0-9]{11}$/" required>
+                    <input name="username" type="text" data-ng-model="data.username" data-ng-blur="usernameBlur = true" data-ng-pattern="/^[0-9]{11}$/" required>
                 </label>
-                <p style="color: grey;" data-ng-show="form.username.$invalid">Wprowadź prawidłową nazwę użytkownika.</p>
+                <p style="color: grey;" data-ng-show="(usernameBlur && form.username.$invalid) || (usernameBlur && form.username.$error.pattern)">Wprowadź prawidłową nazwę użytkownika.</p>
                 <label class="item item-input">
                     <span class="input-label">Hasło</span>
                     <input name="password" type="password" data-ng-model="data.password" data-ng-minlength="5" required>
