--- a/www/templates/treatments/treatment_details.html
+++ b/www/templates/treatments/treatment_details.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Szczegóły">
+<ion-view view-title="Szczegóły" data-ng-init="loadTreatmentDetails()">
     <ion-content class="padding" style="text-align: center;" data-ng-repeat="treatment in treatmentDetails">
         <div class="row header" style="margin-bottom: 10px; border: 1px solid #dddddd; height: 30px; padding-top: 0px">
             <div class="col" style="font-weight: bold;">Data</div>
