--- a/www/templates/prices/prices.html
+++ b/www/templates/prices/prices.html
@@ -1,10 +1,10 @@
-<ion-view view-title="Cennik usług" data-ng-init="loadPricesList()">
-    <ion-content class="padding" style="text-align: center;" start-y="70" data-ng-hide="error">
+<ion-view view-title="Cennik usług"data-ng-init="loadPricesList()">
+    <ion-content class="padding" style="text-align: center;">
         <div id="search-box" class="bar bar-header item-input-inset">
             <div class="item-input-wrapper">
                 <i class="icon ion-search placeholder-icon"></i>
                 <input type="search" placeholder="Search" data-ng-model="query.searchQuery">
-                <i class="icon ion-ios-close-empty" data-ng-show="query.searchQuery.length" data-ng-click="clearSearch()"></i>
+                <i style="width: 20px" class="icon ion-ios-close-empty" data-ng-show="query.searchQuery.length" data-ng-click="clearSearch()"></i>
             </div>
         </div>
         <div class="row header" style="font-weight: bold; border: 1px solid #dddddd; background-color: #F8F8F8; margin-bottom: 10px">
@@ -14,11 +14,6 @@
         <div class="row" data-ng-repeat="price in prices |filter: query.searchQuery |orderBy: 'kindOfTreatment'" style="height: 50px; margin-bottom: 10px; border: 1px solid #dddddd;">
             <div class="col">{{price.kindOfTreatment}}</div>
             <div class="col" style="line-height: 35px">{{price.price}} zł/{{price.time}} min</div>
-        </div>
-    </ion-content>
-    <ion-content class="padding" style="text-align: center" data-ng-show="error">
-        <div class="row" style="color: red">
-            Wystąpił błąd przy pobieraniu listy cen!
         </div>
     </ion-content>
 </ion-view>
