--- a/www/templates/employees/employees.html
+++ b/www/templates/employees/employees.html
@@ -1,14 +1,14 @@
 <ion-view view-title="Pracownicy gabinetu" data-ng-init="loadEmployeesList()">
-    <ion-content class="padding" style="text-align: center;" data-ng-hide="error">
-        <div id="search-box" class="bar bar-header item-input-inset">
+    <ion-content class="padding" style="text-align: center;" data-ng-hide="error" start-y="75">
+        <div id="search-box" class="bar bar-header item-input-inset" style="margin-bottom: 10px">
             <div class="item-input-wrapper">
                 <i class="icon ion-search placeholder-icon"></i>
-                <input type="search" placeholder="Search" data-ng-model="data.searchQuery">
-                <i style="width: 20px" class="icon ion-ios-close-empty" data-ng-show="data.searchQuery.length" data-ng-click="clearSearch()"></i>
+                <input type="search" placeholder="Wyszukaj" data-ng-model="query.searchQuery">
+                <i style="width: 20px" class="icon ion-ios-close-empty" data-ng-show="query.searchQuery.length" data-ng-click="clearSearch()"></i>
             </div>
         </div>
         <div class="list">
-            <div class="row" style="margin-bottom: 5px; border-bottom:solid 1px" data-ng-repeat="employee in employees| filter: data.searchQuery">
+            <div class="row" style="margin-bottom: 5px; border-bottom:solid 1px" data-ng-repeat="employee in employees| filter: query.searchQuery | orderBy: 'position'">
                 <div class="col">
                     <img style="height:105px; display:block; margin:auto;" src="{{employee.img}}"/>
                 </div>
