--- a/www/templates/treatments/treatments.html
+++ b/www/templates/treatments/treatments.html
@@ -8,8 +8,8 @@
             <div class="col">Szczegóły</div>
         </div>
         <div class="row" data-ng-repeat="treatment in treatments|orderBy: 'date'" style="margin-bottom: 10px; border: 1px solid #dddddd;">
-            <div class="col" style="line-height: 35px;">{{treatment.date}}</div>
-            <div class="col" style="line-height: 35px;">{{treatment.hour}}</div>
+            <div class="col" style="line-height: 35px;">{{treatment.date |date:'dd.MM.yyyy'}}</div>
+            <div class="col" style="line-height: 35px;">{{treatment.hour |date:'HH:mm'}}</div>
             <button class="col button button-small button-positive" style="margin-top: 5px; width: 125px" data-ui-sref="tab.treatment-detail({treatmentId: treatment.id})">Więcej</button>
         </div>
     </ion-content>
