--- a/www/templates/employees/employee_details.html
+++ b/www/templates/employees/employee_details.html
@@ -2,10 +2,10 @@
     <ion-content class="padding" data-ng-repeat="employee in employeeDetails">
         <div class="row" style="margin-bottom: 5px;">
             <div class="col">
-                <img style="height:125px; display:block; margin:auto;" src="{{employee.img}}"/>
+                <img style="height:125px; display:block; margin:auto;" data-ng-src="{{employee.img}}"/>
             </div>
             <div class="col">
-                <p style="font-weight: bold;">{{employee.name}}</p>
+                <p style="font-weight: bold;">{{employee.degree}} {{employee.name}} {{employee.surname}}</p>
                 <p>Stanowisko: {{employee.position}}</p>
                 <p>Wiek: {{employee.age}} lat</p>
             </div>
@@ -13,7 +13,7 @@
         <p style="text-align: justify">{{employee.informations}}</p>
         <div class="row" style="text-align: center">
             <div class="col">
-                <button style="width: 155px" class="button button-positive" data-ui-sref="tab.contact" data-ng-disabled="form.$invalid">
+                <button style="width: 155px" class="button button-positive" data-ng-click="redirectContact(employee.email)" data-ng-disabled="form.$invalid">
                     Wyślij wiadomość
                 </button>
             </div>
