--- a/www/templates/employees/employees.html
+++ b/www/templates/employees/employees.html
@@ -8,12 +8,12 @@
             </div>
         </div>
         <div class="list">
-            <div class="row" style="margin-bottom: 5px; border-bottom:solid 1px" data-ng-repeat="employee in employees| filter: query.searchQuery | orderBy: 'position'">
+            <div class="row" style="margin-bottom: 5px; border-bottom:solid 1px" data-ng-repeat="employee in employees| filter: query.searchQuery | orderBy: 'surname'">
                 <div class="col">
-                    <img style="height:105px; display:block; margin:auto;" src="{{employee.img}}"/>
+                    <img style="height:105px; display:block; margin:auto;" alt="{{employee.name}}" data-ng-src="{{employee.img}}" />
                 </div>
                 <div class="col">
-                    <p style="font-weight: bold;">{{employee.name}}</p>
+                    <p style="font-weight: bold;">{{employee.degree}} {{employee.name}} {{employee.surname}}</p>
                     <p>Stanowisko: {{employee.position}}</p>
                     <button style="width: 125px" class="button button-small button-positive" data-ui-sref="tab.employee-detail({employeeId: employee.id})">Więcej</button>
                 </div>
