--- a/www/templates/treatments/treatments.html
+++ b/www/templates/treatments/treatments.html
@@ -8,12 +8,14 @@
             <div class="col">Szczegóły</div>
         </div>
         <div class="row" data-ng-repeat="treatment in treatments|orderBy: 'date'" style="margin-bottom: 10px; border: 1px solid #dddddd;">
-            <div class="col" style="line-height: 35px;">{{treatment.date |date:'dd.MM.yyyy'}}</div>
-            <div class="col" style="line-height: 35px;">{{treatment.date |date:'HH:mm'}}</div>
-            <button class="col button button-small button-positive" style="margin-top: 5px; width: 125px" data-ui-sref="tab.treatment-detail({treatmentId: treatment.id})">Więcej</button>
+            <div class="col" style="line-height: 35px;">{{treatment.datehour|date:'dd.MM.yyyy'}} r.</div>
+            <div class="col" style="line-height: 35px;">{{treatment.datehour|date:'HH:mm'}}</div>
+            <button class="col button button-small button-positive" style="margin-top: 5px; width: 125px" data-ui-sref="tab.treatment-detail({treatmentId: treatment.treatmentid})">Więcej</button>
         </div>
     </ion-content>
     <ion-content class="padding" style="text-align: center" data-ng-show="empty">
+        <ion-refresher pulling-text="Pociągnij, aby odświeżyć" on-refresh="doRefresh()">
+        </ion-refresher>
         <div class="row">
             Nie masz żadnych zaplanowanych zabiegów. Udaj się do gabinetu rehabilitacyjnego w celu umówienia się na dogodny termin. Wskazówka dojazdu:
         </div>
