Added sending email functionality.

--- a/www/templates/treatments/treatments.html
+++ b/www/templates/treatments/treatments.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Terminy zabiegów" data-ng-init="loadTreatmentsList()">
+<ion-view cache-view="false" view-title="Terminy zabiegów" data-ng-init="loadTreatmentsList()">
     <ion-content class="padding" style="text-align: center;" data-ng-hide="empty">
         <ion-refresher pulling-text="Pociągnij, aby odświeżyć" on-refresh="doRefresh()">
         </ion-refresher>
