--- a/www/templates/contact/contact.html
+++ b/www/templates/contact/contact.html
@@ -6,21 +6,21 @@
                     <div class="input-label">
                         Do:
                     </div>
-                    <select name="employee" class="item item-input item-select" style="width: 100%" data-ng-model="contact.employee" required>
+                    <select name="employee" class="item item-input item-select" style="width: 100%" data-ng-model="contact.to" required>
                         <option selected disabled value="">Wybierz lekarza...</option>
                         <option data-ng-repeat="employee in employees" value="{{employee.email}}">{{employee.degree}} {{employee.name}} {{employee.surname}}</option>
                     </select>
                 </label>
                 <label class="item item-input">
-                    <input name="title" type="text" placeholder="Tytuł wiadomości..." data-ng-model="contact.title" required>
+                    <input name="title" type="text" placeholder="Tytuł wiadomości..." data-ng-model="contact.subject" required>
                 </label>
                 <label class="item item-input">
-                    <textarea name="content" style="height: 275px;" placeholder="Treść wiadomości..." data-ng-model="contact.content" required></textarea>
+                    <textarea name="content" style="height: 275px;" placeholder="Treść wiadomości..." data-ng-model="contact.body" required></textarea>
                 </label>
             </div>
         </form>
         <div class="col text-center">
-            <button style="width: 155px" class="button button-positive" data-ng-click="showAlert()" data-ng-disabled="form.$invalid">
+            <button style="width: 155px" class="button button-positive" data-ng-click="sendEmail(contact)" data-ng-disabled="form.$invalid">
                 Wyślij wiadomość
             </button>
         </div>
