Added price details. Fixed vertical align.

--- a/www/templates/employees/employee_details.html
+++ b/www/templates/employees/employee_details.html
@@ -13,7 +13,7 @@
         <p style="text-align: justify">{{employee.informations}}</p>
         <div class="row" style="text-align: center">
             <div class="col">
-                <button style="width: 155px" class="button button-positive" data-ng-click="redirectContact(employee.email)" data-ng-disabled="form.$invalid">
+                <button class="button button-positive" data-ng-click="redirectContact(employee.email)" data-ng-disabled="form.$invalid">
                     Wyślij wiadomość
                 </button>
             </div>
