--- a/www/templates/employees/employees.html
+++ b/www/templates/employees/employees.html
@@ -15,7 +15,7 @@
                 <div class="col">
                     <p style="font-weight: bold;">{{employee.degree}} {{employee.name}} {{employee.surname}}</p>
                     <p>Stanowisko: {{employee.position}}</p>
-                    <button style="width: 125px" class="button button-small button-positive" data-ui-sref="tab.employee-detail({employeeId: employee.employeeid})">Więcej</button>
+                    <button style="width: 100%" class="button button-small button-positive" data-ui-sref="tab.employee-detail({employeeId: employee.employeeid})">Więcej</button>
                 </div>
             </div>
         </div>
