--- a/www/templates/treatments/treatment_details.html
+++ b/www/templates/treatments/treatment_details.html
@@ -1,38 +1,38 @@
 <ion-view view-title="Szczegóły" data-ng-init="loadTreatmentDetails()">
     <ion-content class="padding" style="text-align: center;" data-ng-repeat="treatment in treatmentDetails">
-        <div class="row header" style="margin-bottom: 10px; border: 1px solid #dddddd; height: 30px; padding-top: 0px">
-            <div class="col" style="font-weight: bold;">Data</div>
-            <div class="col">{{treatment.datehour |date:'dd.MM.yyyy'}} r.</div>
-        </div>
-        <div class="row header" style="margin-bottom: 10px; border: 1px solid #dddddd; height: 30px;">
-            <div class="col" style="font-weight: bold;">Godzina</div>
-            <div class="col" data-ng-model="date">{{treatment.datehour |date:'HH:mm'}}</div>
-        </div>
-        <div class="row header" style="margin-bottom: 10px; border: 1px solid #dddddd; height: 50px;">
-            <div class="col" style="font-weight: bold; line-height: 35px;">Rodzaj zabiegu</div>
-            <div class="col">{{treatment.kindoftreatment}}</div>
-        </div>
-        <div class="row header" style="margin-bottom: 10px; border: 1px solid #dddddd; height: 30px;">
-            <div class="col" style="padding-bottom: 15px; font-weight: bold;">Numer pokoju</div>
-            <div class="col">p. {{treatment.room}}</div>
-        </div>
-        <div class="row header" style="margin-bottom: 10px; border: 1px solid #dddddd; height: 30px;">
-            <div class="col" style="font-weight: bold;">Lekarz</div>
-            <div class="col">{{treatment.degree}} {{treatment.name}} {{treatment.surname}}</div>
-        </div>
-        <div class="row header" style="margin-bottom: 10px; border: 1px solid #dddddd; height: 30px;">
-            <div class="col" style="padding-bottom: 15px; font-weight: bold;">Rodzaj wizyty</div>
-            <div class="col">{{treatment.kindofvisit}}</div>
-        </div>
-        <div class="row header" style="margin-bottom: 10px; border: 1px solid #dddddd; height: 30px;">
-            <div class="col" style="font-weight: bold;">Cena</div>
-            <div class="col">{{treatment.price}} zł</div>
+        <div class="row header" style="margin-bottom: 10px; border: 1px solid #dddddd; padding-top: 0px">
+            <div class="col" style="display: flex; align-items: center; justify-content: center; font-weight: bold;">Data</div>
+            <div class="col" style="display: flex; align-items: center; justify-content: center;">{{treatment.datehour |date:'dd.MM.yyyy'}} r.</div>
         </div>
         <div class="row header" style="margin-bottom: 10px; border: 1px solid #dddddd;">
-            <div class="col" style="font-weight: bold;">Dodatkowe informacje</div>
-            <div class="col">{{treatment.additionalinformations}}</div>
+            <div class="col" style="display: flex; align-items: center; justify-content: center; font-weight: bold;">Godzina</div>
+            <div class="col" style="display: flex; align-items: center; justify-content: center;">{{treatment.datehour |date:'HH:mm'}}</div>
         </div>
-        <button style="width: 155px" class="button button-positive" data-ng-click="showConfirm(treatment.datehour)">
+        <div class="row header" style="margin-bottom: 10px; border: 1px solid #dddddd;">
+            <div class="col" style="display: flex; align-items: center; justify-content: center; font-weight: bold;">Rodzaj zabiegu</div>
+            <div class="col" style="display: flex; align-items: center; justify-content: center">{{treatment.kindoftreatment}}</div>
+        </div>
+        <div class="row header" style="margin-bottom: 10px; border: 1px solid #dddddd;">
+            <div class="col" style="display: flex; align-items: center; justify-content: center; font-weight: bold;">Numer pokoju</div>
+            <div class="col" style="display: flex; align-items: center; justify-content: center;">p. {{treatment.room}}</div>
+        </div>
+        <div class="row header" style="margin-bottom: 10px; border: 1px solid #dddddd;">
+            <div class="col" style="display: flex; align-items: center; justify-content: center; font-weight: bold;">Lekarz</div>
+            <div class="col" style="display: flex; align-items: center; justify-content: center;">{{treatment.degree}} {{treatment.name}} {{treatment.surname}}</div>
+        </div>
+        <div class="row header" style="margin-bottom: 10px; border: 1px solid #dddddd;">
+            <div class="col" style="display: flex; align-items: center; justify-content: center; font-weight: bold;">Rodzaj wizyty</div>
+            <div class="col" style="display: flex; align-items: center; justify-content: center;">{{treatment.kindofvisit}}</div>
+        </div>
+        <div class="row header" style="margin-bottom: 10px; border: 1px solid #dddddd;">
+            <div class="col" style="display: flex; align-items: center; justify-content: center; font-weight: bold;">Cena</div>
+            <div class="col" style="display: flex; align-items: center; justify-content: center;">{{treatment.price}} zł</div>
+        </div>
+        <div class="row header" style="margin-bottom: 10px; border: 1px solid #dddddd;">
+            <div class="col" style="display: flex; align-items: center; justify-content: center; font-weight: bold;">Dodatkowe informacje</div>
+            <div class="col" style="display: flex; align-items: center; justify-content: center;">{{treatment.additionalinformations}}</div>
+        </div>
+        <button class="button button-positive" data-ng-click="showConfirm(treatment.datehour)">
             Odwołaj wizytę
         </button>
     </ion-content>
