--- a/www/templates/contact/contact.html
+++ b/www/templates/contact/contact.html
@@ -1,26 +1,26 @@
 <ion-view view-title="Kontakt" data-ng-init="loadEmployeesList()">
     <ion-content class="padding">
         <form name="form">
-            <div class="list list-item">
+            <div class="list">
                 <label class="item item-input item-select">
                     <div class="input-label">
                         Do:
                     </div>
-                    <select name="employee" class="item item-input item-select" style="width: 100%" data-ng-model="contact.to" required>
+                    <select data-ng-model="contact.to" required>
                         <option selected disabled value="">Wybierz lekarza...</option>
                         <option data-ng-repeat="employee in employees" value="{{employee.email}}">{{employee.degree}} {{employee.name}} {{employee.surname}}</option>
                     </select>
                 </label>
                 <label class="item item-input">
-                    <input name="title" type="text" placeholder="Tytuł wiadomości..." data-ng-model="contact.subject" required>
+                    <input type="text" placeholder="Tytuł wiadomości..." data-ng-model="contact.subject" required>
                 </label>
                 <label class="item item-input">
-                    <textarea name="content" style="height: 275px;" placeholder="Treść wiadomości..." data-ng-model="contact.body" required></textarea>
+                    <textarea style="height: 275px;" placeholder="Treść wiadomości..." data-ng-model="contact.body" required></textarea>
                 </label>
             </div>
         </form>
         <div class="col text-center">
-            <button style="width: 155px" class="button button-positive" data-ng-click="sendEmail(contact)" data-ng-disabled="form.$invalid">
+            <button class="button button-positive" data-ng-click="sendEmail(contact)" data-ng-disabled="form.$invalid">
                 Wyślij wiadomość
             </button>
         </div>
