--- a/www/templates/prices/prices.html
+++ b/www/templates/prices/prices.html
@@ -8,12 +8,13 @@
             </div>
         </div>
         <div class="row header" style="font-weight: bold; border: 1px solid #dddddd; background-color: #F8F8F8; margin-bottom: 10px">
-            <div class="col">Rodzaj zabiegu</div>
-            <div class="col">Cena/czas trwania</div>
+            <div class="col col-50" style="display: flex; align-items: center; justify-content: center">Rodzaj zabiegu</div>
+            <div class="col col-50" style="display: flex; align-items: center; justify-content: center">Cena/czas trwania</div>
         </div>
-        <div class="row" data-ng-repeat="price in prices|filter: query.searchQuery |orderBy: 'kindOfTreatment'" style="height: 50px; margin-bottom: 10px; border: 1px solid #dddddd;">
-            <div class="col">{{price.kindoftreatment}}</div>
-            <div class="col" style="line-height: 35px">{{price.price}} zł/{{price.time}} min</div>
+        <div class="row" data-ng-repeat="price in prices|filter: query.searchQuery |orderBy: 'kindOfTreatment'" style="margin-bottom: 10px; border: 1px solid #dddddd;" data-ui-sref="tab.price-detail({priceId: price.priceid})">
+            <div class="col col-50" style="display: flex; align-items: center; justify-content: center">{{price.kindoftreatment}}</div>
+            <div class="col col-34" style="display: flex; align-items: center; justify-content: center">{{price.price}} zł/{{price.time}} min</div>
+            <i style="display: flex; align-items: center; justify-content: center" class="button button-clear icon-right ion-chevron-right"></i>
         </div>
     </ion-content>
 </ion-view>
