Added notifications! Created details view for treatments/prices. Fixed bugs.

--- a/www/templates/about/about.html
+++ b/www/templates/about/about.html
@@ -18,8 +18,8 @@
         </div>
         <div class="row">
             <div class="col">
-                <span>RehApp<br>
-                    Wersja: 1.0.0</span>
+                <span data-ng-init="getVersion()">RehApp<br>
+                    Wersja: {{appVersion}}</span>
             </div>
         </div>
         <div class="row" style="padding-top: 20px">
