--- a/www/templates/contact/contact.html
+++ b/www/templates/contact/contact.html
@@ -15,12 +15,12 @@
                     <input type="text" placeholder="Tytuł wiadomości..." data-ng-model="contact.subject" required>
                 </label>
                 <label class="item item-input">
-                    <textarea style="height: 275px;" placeholder="Treść wiadomości..." data-ng-model="contact.body" required></textarea>
+                    <textarea style="height: 225px;" placeholder="Treść wiadomości..." data-ng-model="contact.body" required></textarea>
                 </label>
             </div>
         </form>
         <div class="col text-center">
-            <button class="button button-positive" data-ng-click="sendEmail(contact)" data-ng-disabled="form.$invalid">
+            <button class="button button-positive" type="submit" form="form" data-ng-click="sendEmail(contact)" data-ng-disabled="form.$invalid">
                 Wyślij wiadomość
             </button>
         </div>
