--- a/www/templates/prices/price_details.html
+++ b/www/templates/prices/price_details.html
@@ -1,5 +1,28 @@
 <ion-view view-title="Szczegóły" data-ng-init="loadPriceDetails()">
     <ion-content class="padding">
-        
+        <div class="card">
+            <div class="item item-divider">
+                Opis zabiegu:
+            </div>
+            <div class="item item-text-wrap">
+                {{priceDetail.description}}
+            </div>
+        </div>
+        <div class="card">
+            <div class="item item-divider">
+                Zalecenia:
+            </div>
+            <div class="item item-text-wrap">
+                {{priceDetail.recommendations}}
+            </div>
+        </div>
+        <div class="card">
+            <div class="item item-divider">
+                Przeciwwskazania:
+            </div>
+            <div class="item item-text-wrap">
+                {{priceDetail.contraindications}}
+            </div>
+        </div>
     </ion-content>
 </ion-view>
